--- a/extracredits/public/css/styles.css
+++ b/extracredits/public/css/styles.css
@@ -190,6 +190,165 @@ a.unlink:hover {
     background-color: rgba(0,0,0,.275);
 }
 
+/*********** DASHBOARD CLASSES ******/
+.border-left-primary {
+    border-left: .35rem solid #4e73df !important;
+}
+
+.border-left-success {
+    border-left: .35rem solid #67B447 !important;
+}
+
+.border-left-info {
+    border-left: .35rem solid #36b9cc !important;
+}
+
+.border-left-warning {
+    border-left: .35rem solid #e155fd !important;
+}
+
+.text-success {
+    color: #67B447 !important;
+}
+
+.text-info {
+    color: #36b9cc !important;
+}
+
+.text-primary {
+    color: #4e73df !important;
+}
+
+.animated--fade-in {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+    -webkit-animation-duration: 200ms;
+    animation-duration: 200ms;
+    -webkit-animation-timing-function: opacity cubic-bezier(0, 1, 0.4, 1);
+    animation-timing-function: opacity cubic-bezier(0, 1, 0.4, 1);
+  }
+  
+.bg-gradient-primary {
+background-color: #4e73df;
+background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+background-size: cover;
+}
+
+.bg-gradient-secondary {
+background-color: #858796;
+background-image: linear-gradient(180deg, #858796 10%, #60616f 100%);
+background-size: cover;
+}
+
+.bg-gradient-success {
+background-color: #1cc88a;
+background-image: linear-gradient(180deg, #1cc88a 10%, #13855c 100%);
+background-size: cover;
+}
+
+.bg-gradient-info {
+background-color: #36b9cc;
+background-image: linear-gradient(180deg, #36b9cc 10%, #258391 100%);
+background-size: cover;
+}
+
+.bg-gradient-warning {
+background-color: #f6c23e;
+background-image: linear-gradient(180deg, #f6c23e 10%, #dda20a 100%);
+background-size: cover;
+}
+
+.bg-gradient-danger {
+background-color: #e74a3b;
+background-image: linear-gradient(180deg, #e74a3b 10%, #be2617 100%);
+background-size: cover;
+}
+
+.bg-gradient-light {
+background-color: #f8f9fc;
+background-image: linear-gradient(180deg, #f8f9fc 10%, #c2cbe5 100%);
+background-size: cover;
+}
+
+.bg-gradient-dark {
+background-color: #5a5c69;
+background-image: linear-gradient(180deg, #5a5c69 10%, #373840 100%);
+background-size: cover;
+}
+
+.bg-gray-100 {
+background-color: #f8f9fc !important;
+}
+
+.bg-gray-200 {
+background-color: #eaecf4 !important;
+}
+
+.bg-gray-300 {
+background-color: #dddfeb !important;
+}
+
+.bg-gray-400 {
+background-color: #d1d3e2 !important;
+}
+
+.bg-gray-500 {
+background-color: #b7b9cc !important;
+}
+
+.bg-gray-600 {
+background-color: #858796 !important;
+}
+
+.bg-gray-700 {
+background-color: #6e707e !important;
+}
+
+.bg-gray-800 {
+background-color: #5a5c69 !important;
+}
+
+.bg-gray-900 {
+background-color: #3a3b45 !important;
+}
+
+.text-gray-100 {
+color: #f8f9fc !important;
+}
+
+.text-gray-200 {
+color: #eaecf4 !important;
+}
+
+.text-gray-300 {
+color: #dddfeb !important;
+}
+
+.text-gray-400 {
+color: #d1d3e2 !important;
+}
+
+.text-gray-500 {
+color: #b7b9cc !important;
+}
+
+.text-gray-600 {
+color: #858796 !important;
+}
+
+.text-gray-700 {
+color: #6e707e !important;
+}
+
+.text-gray-800 {
+color: #5a5c69 !important;
+}
+
+.text-gray-900 {
+color: #3a3b45 !important;
+}
+
+/*********** MOBILE VIEW ***********/
 @media only screen and (max-width: 767.98px) {
     .big-number {
         width: 2.5rem;
